# code

./: README.md
alg/: fibonacci.py  fibonacci_huge.py  fibonacci_last_digit.py  gcd.py  lcm.py  max_pairwise_product.py
boids/: Makefile  README.md  notes.md  pyproject.toml
boids/boids/: __main__.py  boid.py
boids/tests/: boid_test.py
brainfuck/: .gitignore  LICENSE  Makefile  README.md
brainfuck/src/: bf.c
brainfuck/test/: christmas.bf  fib.bf  sierpinski.bf  test.bf
brewlisp/: README.md
chess/: LICENSE  README.md  project.clj  readme.md
chess/doc/: design.md
emacs-coffeescript-mode/: CHANGELOG.md  README.md
emacs-litcoffee-mode/: CHANGELOG.md  Makefile  README.md
emacs-litcoffee-mode/test/: test-helper.el  test-highlighting.el
emacs-quick-restart/: quick-restart.el  quick-restart.elc
getToKnowX/: README.md
gpt-chat/: Makefile  README.md  pyproject.toml
gpt-chat/gpt_chat/: main.py
gruvbox-tty/: LICENSE  README.md  gruvbox-dark.txt  gruvbox-light.txt
hyKoans/: LICENSE  README.md  setup.py
hyKoans/hykoan/: cmdline.py
lightrail/: README.md  project.clj
makecoffee/: .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  index.js  makecoffee.coffee  package-lock.json  package.json
mastodon-bot/: README.md  mastodon-bot.cljs  package-lock.json  package.json
moapi/: README.md  package.json
scripts/: usaa-csv
sieve-filters/: README.md  filters.sieve
spider-lang/: README.md  notes.md
tclCallGraph/: callGraph.tcl
tclCmdline/: README.md  cmdline.tcl
warbler/: .gitignore  README.md  package-lock.json  package.json
(+34 files in other folders)
