[tool.poetry]
name = "gpt-chat"
version = "0.1.0"
description = ""
authors = ["Jade Michael Thornton <jademichael@jmthornton.net>"]
readme = "README.md"
packages = [{include = "gpt_chat"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.8"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
